Add session login and flash messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,8 @@
 
   </head>
 
-  <body>
+  <body class="container-fluid">
     <%= yield %>
-    <% flash.each do |key, value| %>
-      <div class="alert alert-<%= key %>">
-        <%= value %>
-      </div>
-    <% end %>
+    <%= render 'shared/flash_messages' %>
   </body>
 </html>
