--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,12 +1,6 @@
-<header class="hero">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col">
-        <h1>The Journal App</h1>
-        <p>Thoughts Transformed, One Entry at a Time.</p>
-       
-      </div>
-    </div>
-  </div>
-</header>
+<%= render 'shared/navbar' %>
+
+<div class="container mt-4">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas illum cum inventore accusamus. Tempore cum rerum similique eligendi ratione mollitia sunt, cumque illo architecto obcaecati harum illum sint adipisci fuga.</p>
+</div>
 
