--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 <header class="hero">
   <div class="container">
-    <div class="row align-items-center">
-      <div class="col">
+    <div class="row-cols-2 align-items-center">
+      <div class="col m-auto" style="padding-top: 16rem">
         <h1>The Journal App</h1>
         <p>Thoughts Transformed, One Entry at a Time.</p>
-        <%= link_to "Login Here", login_path, class: "btn btn-primary" %>
+        <%= link_to "Login", login_path, class: "btn btn-primary" %>
         <%= link_to "Sign Up", new_user_path, class: "btn btn-primary" %>
       </div>
     </div>
