--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,26 @@
-<div class="container">
+<div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <h2>Sign Up</h2>
-      <%= form_with(model: @user, url: users_path, method: :post) do |form| %>
-        <%= form.label :username %>
-        <%= form.text_field :username, class: "form-control" %>
+      <div class="card">
+        <div class="card-body">
+          <h2>Sign Up</h2>
+          <%= form_with(model: @user, url: users_path, method: :post) do |form| %>
+            <%= form.label :username %>
+            <%= form.text_field :username, class: "form-control" %>
 
-        <%= form.label :email %>
-        <%= form.email_field :email, class: "form-control" %>
+            <%= form.label :email %>
+            <%= form.email_field :email, class: "form-control" %>
 
-        <%= form.label :password %>
-        <%= form.password_field :password, class: "form-control" %>
+            <%= form.label :password %>
+            <%= form.password_field :password, class: "form-control" %>
 
-        <%= form.label :password_confirmation %>
-        <%= form.password_field :password_confirmation, class: "form-control" %>
+            <%= form.label :password_confirmation %>
+            <%= form.password_field :password_confirmation, class: "form-control" %>
 
-        <%= form.submit "Sign Up", class: "btn btn-primary mt-3" %>
-      <% end %>
+            <%= form.submit "Sign Up", class: "btn btn-primary mt-3" %>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
