--- a/app/views/categories/_categories_list.html.erb
+++ b/app/views/categories/_categories_list.html.erb
@@ -1,14 +1,20 @@
 <div class="container">
-  <div class="col-md-6">
-    <h2>Category List</h2>
+  <div class="list-group-items d-flex justify-content-between align-items-center">
+    <div>
+      <h2>Category List</h2>
+    </div>
+    <div>
+      <%= link_to 'Add New', new_category_path, class: 'btn btn-sm btn-outline-primary' %>
+      <%= link_to 'Back', dashboard_path, class: 'btn btn-sm btn-outline-secondary' %>
+    </div>
   </div>
 
   <div class="card">
     <div class="card-body">
       <% if categories.any? %>
-        <ul class="list-group">
+        <ul class="list-group" role="list">
           <% categories.each do |category| %>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
+            <li id="category_<%= category.id %>" class="list-group-item d-flex justify-content-between align-items-center" role="listitem">
               <div class="category-info">
                 <strong><%= category.name %></strong>
                 <p><%= category.description %></p>
@@ -16,7 +22,8 @@
 
               <div class="category-actions">
                 <%= link_to 'Edit', edit_category_path(category), class: 'btn btn-sm btn-outline-secondary' %>
-                <%= link_to 'Delete', category, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-outline-danger' %>
+                <%= link_to 'Delete', category_path(category), method: :delete, data: { confirm: 'Are you sure you want to delete this category?' }, class: 'btn btn-sm btn-outline-danger' %>
+                <%= button_to 'Delete', category_path(category), method: :delete, data: { confirm: 'Are you sure you want to delete this category?' }, class: 'btn btn-sm btn-outline-danger' %>
               </div>
             </li>
           <% end %>
