--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,11 +1,18 @@
+<%= render 'shared/navbar' %>
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <h2>Edit Category</h2>
+      <div class="list-group-items d-flex justify-content-between align-items-center">
+        <div>
+          <h2>Edit Category</h2>
+        </div>
+        <div>
+          <%= link_to 'Back', categories_path, class: 'btn btn-sm btn-outline-secondary' %>
+        </div>
+      </div>
       <%= render 'form', category: @category %>
-    </div>
-    <div class="col-md-6">
-      <%= render 'categories_list', categories: Category.all %>
     </div>
   </div>
 </div>
+
+
