--- a/app/views/categories/_categories_list.html.erb
+++ b/app/views/categories/_categories_list.html.erb
@@ -21,9 +21,8 @@
               </div>
 
               <div class="category-actions">
-                <%= link_to 'Edit', edit_category_path(category), class: 'btn btn-sm btn-outline-secondary' %>
-                <%= link_to 'Delete', category_path(category), method: :delete, data: { confirm: 'Are you sure you want to delete this category?' }, class: 'btn btn-sm btn-outline-danger' %>
-                <%= button_to 'Delete', category_path(category), method: :delete, data: { confirm: 'Are you sure you want to delete this category?' }, class: 'btn btn-sm btn-outline-danger' %>
+                <%= link_to 'Edit', edit_category_path(category), class: 'btn btn-sm btn-outline-secondary mr-2' %>
+                <%= button_to 'Delete', category_path(category), method: :delete, data: { confirm: 'Are you sure you want to delete this category?' }, class: 'btn btn-sm btn-outline-danger', form_class: 'd-inline' %>
               </div>
             </li>
           <% end %>
